-Começo do html

--- a/src/main/java/com/urbe/interface/Cliente.html
+++ b/src/main/java/com/urbe/interface/Cliente.html
@@ -1,41 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta name="viewport"
+	      content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+	      charset="UTF-8"
+	/>
 	<title>Urbe</title>
-	<link rel="stylesheet" href="./material.min.css">
-	<script src="./material.min.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 <main>
-	<div class="mdl-card">
-		<div class="mdl-card__title">
-			<h2 class="mdl-card__title-text">Solicite uma viagem</h2>
-		</div>
-		<div class="mdl-card__supporting-text">
-			<form action="#">
-				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-					<input class="mdl-textfield__input" type="text" id="txtClienteCpf">
-					<label class="mdl-textfield__label" for="txtClienteCpf">CPF</label>
-					<span class="mdl-textfield__error">CPF inválido!</span>
-				</div>
-				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-					<input class="mdl-textfield__input" type="text" id="txtClienteBairroOrigem">
-					<label class="mdl-textfield__label" for="txtClienteBairroOrigem">Bairro de origem</label>
-				</div>
-				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-					<input class="mdl-textfield__input" type="text" id="txtClienteBairroDestino">
-					<label class="mdl-textfield__label" for="txtClienteBairroDestino">Bairro de destino</label>
-				</div>
-			</form>
-		</div>
-		<div class="mdl-card__actions mdl-card--border">
-			<a class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored">
-				Buscar motoristas
-			</a>
-		</div>
-	</div>
+
 </main>
 </body>
 </html>
