--- a/web/Motorista.html
+++ b/web/Motorista.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Urbe</title>
-	<link rel="stylesheet" href="./material.min.css">
+	<link href="./material.min.css" rel="stylesheet">
 	<script src="./material.min.js"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
