--- a/web/Cliente.html
+++ b/web/Cliente.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport"
+	<meta charset="UTF-8"
 	      content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
-	      charset="UTF-8"
+	      name="viewport"
 	/>
 	<title>Urbe</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 </head>
 <body>
 <main>
